cha-pre-live-flux2/cha-eks-5b/namespaces/icis-squidex-performance/namespace-icis-squidex-performance.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: icis-squidex-performance
  name: icis-squidex-performance
